--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "14.1.0",
+    "@supabase/supabase-js": "^2.39.3",
     "@types/node": "20.11.16",
     "@types/react": "18.2.55",
     "@types/react-dom": "18.2.18",
@@ -18,6 +19,8 @@
     "next": "14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "satori": "^0.10.13",
+    "sharp": "^0.33.2",
     "typescript": "5.3.3"
   }
 }
